# P2P-chat

./: README.md  pyproject.toml  shell.nix
p2p-chat/: client.py  server.py
p2p_chat/: __main__.py  client.py  peer.py  server.py
